--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ a {
     align-items: center;
     justify-content: space-between;
     gap: 16px;
-    padding: 12px 0
+    padding: 12px 27% 12px 0px;
 }
 
 .brand-logo {
@@ -68,7 +68,7 @@ a {
         border-radius: 999px;
         background: rgba(255,255,255,0);
         color: #cfd3e3;
-        font-weight: 300;
+        font-weight: 500;
         transition: transform .15s, background .2s, color .2s, box-shadow .2s
     }
 
@@ -76,7 +76,7 @@ a {
             background: #fff;
             border-color: #fff;
             color: var(--brand1);
-            font-weight: 400;
+            font-weight: 600;
             transform: translateY(-1px);
             box-shadow: 0 10px 22px rgba(0,0,0,.25)
         }
